        --------------------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

4-November 2014 Gunter Folger    had-binary-V10-00-10
- remove left over use of SetA/SetZ.
- Binary cascade: improve handling of destroyed nucleus solving issues with
    light nuclei in BinaryLightIonReaction, like He in H. 
    final state in case target nucleus is destroyed made to conserve 
	 energy and momentum, taking into account momentum transfered to nucleus,
	  and finally forcing conservation.	 
- BinaryLightIonreaction: handle currentA/Z consistant with list of spectators.
    added optional debugging output.
	 	  
2 June 2014 Gunter Folger        had-binary-V10-00-09
- G4NeutronField, G4ProtonField: add static cast to correct 
  compilation warning.

30 May 2014 Gunter Folger        had-binary-V10-00-08
- G4NeutronField, G4ProtonField: remove superfluous const_casts and use 
    unsigned int for index, removing need for check on negative index. 

28 May 2014 Gunter Folger        had-binary-V10-00-07
- G4BinaryCasacde: Improve calculation of mass, and of correction for outgoing 
   particles by always using GetIon() method. IN GetIonMass() return 0 when A==0
	(Addresses crash for p+d seen in d+H in BLIC)

23 May 2014 Andrea Dotti         had-binary-V10-00-06
- Adding protection to G4NeutronField that was missing

23 May 2014 Gunter Folger        had-binary-V10-00-05
- G4NeutronField, G4ProtonField: add protection for position far outside
   nucleus, resulting in negative index.

22 April 2014 Gunter Folger      had-binary-V10-00-04
- move back to use GetDefinition() method, as this now returns const.

2 April 2014 Gunter Folger      had-binary-V10-00-03