@@ -13,6 +13,11 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+11-November 2014 Gunter Folger    had-binary-V10-00-11
+- BinaryLightReaction: Momentum correction wrong in case of no Fragment, but 
+       primary projectile nucleon(s) in final state. 
+       Example: d + Pb -> X, where neutron or proton of deuteron did not interact.
+        
 4-November 2014 Gunter Folger    had-binary-V10-00-10
 - remove left over use of SetA/SetZ.
 - Binary cascade: improve handling of destroyed nucleus solving issues with
